Fixed comment wrapping

--- a/cc/apps/landing/static/less/all.less
+++ b/cc/apps/landing/static/less/all.less
@@ -99,7 +99,7 @@ hr { border-color: @gray; }
 		display: inline-block;
 		margin: 0;
 		margin-top: 15px;
-		max-width: 90%;
+		max-width: 70%;
 	}
 }
 
